Update the 05_09 var name

--- a/examples/ch05/snippets_ipynb/05_09.ipynb
+++ b/examples/ch05/snippets_ipynb/05_09.ipynb
@@ -148,7 +148,7 @@
    "outputs": [],
    "source": [
     "if key in numbers:\n",
-    "    print(f'found {key} at index {numbers.index(search_key)}')\n",
+    "    print(f'found {key} at index {numbers.index(key)}')\n",
     "else:\n",
     "    print(f'{key} not found')"
    ]
